adds (very shiny) gradients to feature cards

--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -147,7 +147,7 @@ section#features {
         // This is the real value from zeplin
         // border: solid 1px rgba(255, 255, 255, 0.05);
         // debug value
-        border: solid 1px green;
+
 
         color: var(--color-text-base);
 
@@ -225,14 +225,20 @@ section#features {
     // still figuring out the gradients used.
     .feature-card-1 {
         //     background-image: linear-gradient(339deg, #0f1623 87%, #06090e 79%, #06090e 14%, #1373d9 0%);
+        background-image: linear-gradient(337deg, #0f1623 85%, #06090e, #1373d9);
+        backdrop-filter: blur(24px);
     }
     .feature-card-2 {
         //     background-image: linear-gradient(338deg, #0f1623 85%, #06090e 77%, #06090e 14%, #008080 0%);
+        background-image: linear-gradient(337deg, #0f1623 85%, #06090e, #008080);
+        backdrop-filter: blur(24px);
     }
     .feature-card-3 {
         // background-image: linear-gradient(336deg, #0f1623 83%, #06090e 76%, #06090e 14%, #fec18a 1%);
-        // backdrop-filter: blur(24px);
+
         // background-image: linear-gradient(337deg, #0f1623 85%, #06090e 77%, #06090e 14%, #008080 0%);
+        background-image: linear-gradient(337deg, #0f1623 85%, #06090e, #fec18a);
+        backdrop-filter: blur(24px);
     }
 }
 
