begins design system styles for buttons

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -457,7 +457,7 @@ section {
 
 .carousel > picture:last-child {
   opacity: 0;
-  animation-duration: 30s;
+  animation-duration: .3s;
   animation-name: fade-in-out;
   animation-iteration-count: infinite;
   animation-direction: alternate;
