--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -51,7 +51,7 @@
               <a href="#">Send</a>
             </li>
             <li class="nav-item-join-button">
-              <button class="link-button">Join Waitlist</button>
+              <button class="button-primary-outline-label">Join Waitlist</button>
             </li>
           </ul>
         </div>
