Bolt implementation for buttons using LESS inheritance and mixins

--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -18,6 +18,22 @@
 
 {% block content %}
   <div class="top-gradient">
+    <br><br><br>
+    <div>
+
+      <button class="button-primary-filled-label">Default</button><br /><br />
+      <button class="button-primary-small-filled-label">Small</button><br /><br />
+      <button class="button-primary-outline-label">button-primary-outline-label</button><br /><br />
+      <button class="button-primary-small-outline-label">button-primary-small-outline-label</button><br /><br />
+      <button class="button-brand-filled-label-icon">button-brand-filled-label-icon</button><br /><br />
+      <button class="button-brand-outline-label">button-brand-outline-label</button><br /><br />
+      <button class="button-brand-small-outline-label">button-brand-small-outline-label</button><br /><br />
+      <button class="button-destructive-filled-label">button-destructive-filled-label</button><br /><br />
+      <button class="button-destructive-outline-label">button-destructive-outline-label</button><br /><br />
+      <button class="button-destructive-small-filled-label">button-destructive-small-filled-label</button>
+
+    </div>
+
     <header id="site-header">
       <div id="site-header-nav">
         <a id="nav-link-home" href="#">
