Remove unnecessary breakpoints

--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -22,9 +22,8 @@ body {
 
 
 // Breakpoints (assumes 16px root)
-@xs-min: 23.4375rem;   // 375px
-@xs-max: 37.4375rem;   // 599px
-@md-min: 37.5rem;      // 600px
+@xs:     23.4375rem;   // 375px
+@sm:     37.5rem;      // 600px
 @md:     56.25rem;     // 900px;
 @lg:     80rem;        // 1280px
 
