Use common class for primary layout blocks instead of id

--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -1,15 +1,9 @@
 @import "tbpro/base.less";
 
 // Constrain all main blocks to the largest breakpoint.
-#masthead,
-#features,
-#reasons,
-#quotes,
-#details,
-#faq {
-        max-width: @lg;
-        margin-inline: auto;
-
+.primary-block {
+    max-width: @lg;
+    margin-inline: auto;
 }
 
 header#masthead {
