--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -57,16 +57,16 @@
         </div>
       </div>
     </header>
-    <header id="masthead">
+    <header id="masthead" class="primary-block">
       {% block masthead %} {% endblock %}
     </header>
 
-    <section id="features">
+    <section id="features" class="primary-block">
       {% block features %}{% endblock %}
     </section>
   </div>
 
-  <section id="reasons">
+  <section id="reasons" class="primary-block">
     {% block reasons %}{% endblock %}
   </section>
 
@@ -75,11 +75,11 @@
   </section>
 
   <div class="lower-gradient">
-    <section id="details">
+    <section id="details" class="primary-block">
       {% block details %}{% endblock %}
     </section>
 
-    <section id="faq">
+    <section id="faq" class="primary-block">
       {% block faq %}{% endblock %}
     </section>
   </div>
