--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -69,10 +69,11 @@
   <section id="reasons" class="primary-block">
     {% block reasons %}{% endblock %}
   </section>
-
-  <section id="quotes">
-    <!-- implementation tbd -->
-  </section>
+  <div class="testimonials-background">
+    <section id="testimonials">
+      {% block testimonials %}{% endblock %}
+    </section>
+  </div>
 
   <div class="lower-gradient">
     <section id="details" class="primary-block">
