Add macro for carousel items and for carousel footer (with JS)

--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -602,7 +602,7 @@ section#testimonials {
                 }
 
 
-                .testimonial-avatar {
+                .attribution-avatar {
                     width: var(--avatar-size-small);
                     height: var(--avatar-size-small);
                     border-radius: 50%;
@@ -615,7 +615,7 @@ section#testimonials {
                     }
                 }
 
-                .testimonial-name {
+                .attribution-name {
                     margin: 0;
                     font-size: 0.9375rem;
                     font-weight: 600;
@@ -629,7 +629,7 @@ section#testimonials {
                     }
                 }
 
-                span {
+                .attribution-role {
                     font-size: 0.8125rem;
                     color: #666;
                     align-self: start;
