Create carousel for testimonials (Fixes #891)
* Remove unnecessary breakpoints

* Use common class for primary layout blocks instead of id

* rename "quotes" to "testimonials"

* working draft of testimonials (quote carousel)

* Add macro for carousel items and for carousel footer (with JS)

* Adjusts header colors and font sizes

--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -57,29 +57,30 @@
         </div>
       </div>
     </header>
-    <header id="masthead">
+    <header id="masthead" class="primary-block">
       {% block masthead %} {% endblock %}
     </header>
 
-    <section id="features">
+    <section id="features" class="primary-block">
       {% block features %}{% endblock %}
     </section>
   </div>
 
-  <section id="reasons">
+  <section id="reasons" class="primary-block">
     {% block reasons %}{% endblock %}
   </section>
-
-  <section id="quotes">
-    <!-- implementation tbd -->
-  </section>
+  <div class="testimonials-background">
+    <section id="testimonials">
+      {% block testimonials %}{% endblock %}
+    </section>
+  </div>
 
   <div class="lower-gradient">
-    <section id="details">
+    <section id="details" class="primary-block">
       {% block details %}{% endblock %}
     </section>
 
-    <section id="faq">
+    <section id="faq" class="primary-block">
       {% block faq %}{% endblock %}
     </section>
   </div>
