Add mixin for background images

--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -64,6 +64,24 @@ button.link-button {
 }
 
 
+// mixins
+.mixin-background-image(@base-path) {
+    // Fallback for older browsers.
+    background-image: url('@{base-path}.png');
+
+    // For browsers that support modern formats.
+    background-image: -webkit-image-set(
+        url('@{base-path}.avif') type('image/avif'),
+        url('@{base-path}.webp') type('image/webp'),
+        url('@{base-path}.png')
+    );
+    background-image: image-set(
+        url('@{base-path}.avif') type('image/avif'),
+        url('@{base-path}.webp') type('image/webp'),
+        url('@{base-path}.png')
+    );
+}
+
 // Constrain the common containers to the largest breakpoint.
 #site-header,
 #site-nav,
